[Fabric] Update for 1.21.5
[Fabric] Finish 1.21.5-rc2 update. Not fully tested

[Fabric] Build against final 1.21.5 release